# walnut-ts-swc

./: .npmignore  Cargo.toml  build.config.ts  glue.cjs  glue.d.cts  index.d.ts  index.mjs  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  build.yaml
npm/darwin-x64/: package.json
scripts/: resolve-deps.js  test-transform.js
src/: finalize.rs  helpers.rs  lib.rs  resolve_modules.rs  resolver.rs  scan_first.rs  transform.rs
