[package]
edition = "2021"
name = "quadband_walnut-ts-swc"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
swc = { version = "*" }
swc_atoms = { version = "*" }
swc_common = { version = "*", features = ["tty-emitter"]}
swc_ecma_ast = { version = "*" }
swc_ecma_loader = { version = "*" }
swc_ecma_parser = { version = "*" }
swc_ecma_visit = { version = "*" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
